base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-python
spec:
  selector:
    app: backend-python
  ports:
  - port: 80
    targetPort: 80
