base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-python
spec:
  ingressClassName: nginx
  rules:
  - host: core.choilab.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-python
            port:
              number: 80
